# InfoGlobeHack

./: .gitignore  README.md  hello_world.code-workspace  tcp_client.py
hello_world/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
hello_world/components/infoglobe_datatype/: CMakeLists.txt  Kconfig.projbuild
hello_world/components/infoglobe_datatype/inc/: infoglobe_byte.h  infoglobe_data_type.h
hello_world/components/infoglobe_datatype/src/: infoglobe_data_type.c
hello_world/components/ssh_task/: CMakeLists.txt
hello_world/main/: CMakeLists.txt  Kconfig.projbuild  hello_world_main.c  main.c  wifi_connect.c
hello_world/main/inc/: animations.h  button_tcp_task.h  frame_maker_task.h  infoglobe_animations.h  ir_led_task.h  message_type.h  ota_server_task.h  sntp_helper.h  tcp_helpers.h  tcp_server_task.h  wifi_connect.h
hello_world/main/src/: animations.c  button_tcp_task.c  frame_maker_task.c  infoglobe_animations.c  ir_led_task.c  message_type.c  ota_server_task.c  sntp_helper.c  tcp_helpers.c  tcp_server_task.c  wifi_connect.c
python/: config.json  connect_tab.py  custom_qstyle.qss  file_helper.py  gui.py  gui_back.py  gui_front.py  gui_settings.json  infoglobe_control_tab.py  ota_tab.py  tcp_client.py  tcp_worker.py  test_app.py  tx_data_tab.py  working_tab_base.py  yellow_material.qss
python/styles/: blue_material.qss  yellow_material.qss
python/ui/: connect_tab.py  gui_front.py  ota_tab.py  tcp_client.py  tcp_worker.py  working_tab_base.py
